--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-toastify": "^8.0.2",
     "redux": "^4.1.1",
     "video-react": "^0.14.1",
-    // "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
